@@ -1,3 +1,9 @@
+2001-04-19  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>
+
+	* __scm.h (SCM_WTA_DISPATCH_0, SCM_WTA_DISPATCH_1,
+	SCM_WTA_DISPATCH_2, SCM_WTA_DISPATCH_n): Inserted required
+	parentheses in order to get the correct associativity.
+
 2001-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* unif.c (scm_array_to_list):  Added missing handling of arrays of
